<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/logo"
            android:layout_height="wrap_content"
            android:text="@string/logo"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:layout_width="50dp"
            android:layout_centerVertical="true"/>
        <ImageView
                android:id="@+id/emoji_objec"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/logo"
                android:background="@drawable/emoji_object"
                android:contentDescription="@string/emojiContentDescr"/>
        <Button
            android:id="@+id/settings"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="18dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/settings" />
        <Button
            android:id="@+id/open_button"
            android:layout_width="94dp"
            android:layout_height="34dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/settings"
            android:layout_centerVertical="true"
            android:background="@drawable/open_button_bg"
            android:text="@string/open"
            android:textColor="@color/textColor" />
        <Button
            android:id="@+id/reset_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/open_button"
            android:text="@string/reset_btn_text"
            android:textColor="@color/textColor"
            android:background="@android:color/transparent"
            android:visibility="invisible"/>
        <Button
            android:id="@+id/info_image_button"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/reset_button"
            android:text="@string/info_btn_text"
            android:textColor="@color/textColor"
            android:background="@android:color/transparent"
            android:visibility="invisible"/>
    </RelativeLayout>
</android.support.v7.widget.Toolbar>
