<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="340dp"
                android:orientation="vertical"
                app:behavior_hideable="false"
                app:behavior_peekHeight="40dp"
                app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
                android:background="@color/colorPrimary">
    <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_up"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/descriptor"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_below="@id/arrow">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/autofixTextView"
                    android:text="@string/autofix"
                    android:textSize="18sp"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="40dp"/>

            <Switch
                    android:id="@+id/autofixSwitch"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/autofixTextView"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"
                    android:textColor="@color/textColor"
                    android:layout_marginTop="40dp"/>
            <TextView
                    android:id="@+id/brightTextView"
                    android:text="@string/brightness"
                    android:textSize="18sp"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/autofixTextView"
                    android:layout_marginTop="22dp"/>

            <SeekBar
                    android:id="@+id/seekBarBright"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/brightTextView"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:progress="50"
                    android:max="100"/>
            <TextView
                    android:id="@+id/temperatureTextView"
                    android:text="@string/temperature"
                    android:textSize="18sp"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/brightTextView"
                    android:layout_marginTop="22dp"/>

            <SeekBar
                    android:id="@+id/seekBarTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/temperatureTextView"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:progress="50"
                    android:max="100"/>
            <TextView
                    android:id="@+id/ContrastTextView"
                    android:text="Contrast"
                    android:textSize="18sp"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/temperatureTextView"
                    android:layout_marginTop="22dp"/>

            <SeekBar
                    android:id="@+id/seekBarContrast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ContrastTextView"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:progress="50"
                    android:max="100"/>
            <TextView
                    android:id="@+id/FilllightTextView"
                    android:text="Fillight"
                    android:textSize="18sp"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/ContrastTextView"
                    android:layout_marginTop="22dp"/>

            <SeekBar
                    android:id="@+id/seekBarFilllight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/FilllightTextView"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:progress="50"
                    android:max="100"/>
            <TextView
                    android:id="@+id/FisheyeTextView"
                    android:text="Fisheye"
                    android:textSize="18sp"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/FilllightTextView"
                    android:layout_marginTop="22dp"/>

            <SeekBar
                    android:id="@+id/seekBarFishEye"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/FisheyeTextView"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:progress="50"
                    android:max="100"/>

            <TextView
                    android:id="@+id/BlackWhiteTextView"
                    android:text="Black/White"
                    android:textSize="18sp"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/seekBarFishEye"
                    android:layout_marginTop="22dp"/>
            <Switch
                    android:id="@+id/BlackWhiteSwitch"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/BlackWhiteTextView"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"
                    android:textColor="@color/textColor"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/FisheyeTextView"
            />
            <SeekBar
                    android:id="@+id/seekBarBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/BlackWhiteTextView"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:progress="50"
                    android:max="100"/>
            <SeekBar
                    android:id="@+id/seekBarWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/seekBarBlack"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:progress="50"
                    android:max="100"/>

            <TextView
                    android:id="@+id/crossprocessTextView"
                    android:text="Crossprocess"
                    android:textSize="18sp"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/seekBarWhite"/>

            <Switch
                    android:id="@+id/crossprocessSwitch"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/crossprocessTextView"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"
                    android:textColor="@color/textColor"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/seekBarWhite"
            />
            <TextView
                    android:id="@+id/documentaryTextView"
                    android:text="Documentary"
                    android:textSize="18sp"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/crossprocessTextView"/>

            <Switch
                    android:id="@+id/documentarySwitch"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/documentaryTextView"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"
                    android:textColor="@color/textColor"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/crossprocessTextView"/>
            <TextView
                    android:id="@+id/negativeTextView"
                    android:text="Negative"
                    android:textSize="18sp"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/documentaryTextView"/>

            <Switch
                    android:id="@+id/negativeSwitch"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/negativeTextView"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"
                    android:textColor="@color/textColor"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/documentaryTextView"/>

            <TextView
                    android:id="@+id/grayscaleTextView"
                    android:text="Grayscale"
                    android:textSize="18sp"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/negativeTextView"/>

            <Switch
                    android:id="@+id/grayscaleSwitch"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/grayscaleTextView"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"
                    android:textColor="@color/textColor"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/negativeTextView"/>


            <TextView
                    android:id="@+id/posterizeTextView"
                    android:text="Posterize"
                    android:textSize="18sp"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/grayscaleTextView"/>

            <Switch
                    android:id="@+id/posterizeSwitch"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/posterizeTextView"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"
                    android:textColor="@color/textColor"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/grayscaleTextView"/>

            <TextView
                    android:id="@+id/sepiaTextView"
                    android:text="Sepia"
                    android:textSize="18sp"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/posterizeSwitch"/>

            <Switch
                    android:id="@+id/sepiaSwitch"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/sepiaTextView"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"
                    android:textColor="@color/textColor"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/posterizeSwitch"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>